--- a/vowelMatchUp.html
+++ b/vowelMatchUp.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Learn French Gender</title>
@@ -21,17 +21,9 @@
             margin-bottom: 20px;
         }
 
-        .hidden {
-            display: none;
-        }
         #image {
             max-width: 100%;
             max-height: 300px; /* Set the maximum height to 300px or any other value that works for you */
-        }
-
-        #scoreboard {
-            font-size: 24px;
-            margin-bottom: 20px;
         }
 
         #score {
@@ -56,7 +48,7 @@
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-lg-6 col-md-8 col-sm-10">
-            <h1 class="text-center mb-4">Learn French Gender</h1>
+            <h1 class="text-center mb-4">French gender</h1>
             <div class="card">
                 <div class="card-body">
                     <h2 id="question" class="mb-4"></h2>
@@ -73,7 +65,7 @@
 
             <div id="word-container" class="mb-4">
                 <h3 id="word" class="text-center"></h3>
-                <img id="image" class="mx-auto d-block" src="" >
+                <img id="image" class="mx-auto d-block" src="" alt="Noun Image">
                 <button id="hint" class="btn btn-secondary mt-3">Hint</button>
             </div>
 
