Fixed bug - image icon with alt text was annoying so hid it. did the same with the hint button. What's the point of the button once you display the image.

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
             text-align: center;
         }
 
+        .hidden {
+            display: none;
+        }
 
     </style>
 </head>
@@ -65,7 +68,7 @@
 
             <div id="word-container" class="mb-4">
                 <h3 id="word" class="text-center"></h3>
-                <img id="image" class="mx-auto d-block" src="" alt="Noun Image">
+                <img id="image" class="mx-auto hidden" src="" alt="Noun Image">
                 <button id="hint" class="btn btn-secondary mt-3">Hint</button>
             </div>
 
