Words -  added some new words based on french exams UI - Added eng word to hint

--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
 
 
             <div id="word-container" class="mb-4">
-                <h3 id="word" class="text-center"></h3>
-                <img id="image" class="mx-auto hidden" src="" alt="Noun Image">
+                <h3 id="fr_word" class="text-center"></h3>
+                <img id="image" class="mx-auto hidden" src="" alt="Image">
+                <h3 id="eng_word" class="text-center"></h3>
                 <button id="hint" class="btn btn-secondary mt-3">Hint</button>
             </div>
 
