Words -  added eng and french sentences UI - Added eng and french sentences under hint

--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
                 <h3 id="fr_word" class="text-center"></h3>
                 <img id="image" class="mx-auto hidden" src="" alt="Image">
                 <h3 id="eng_word" class="text-center"></h3>
+                <h4 id="fr_sentence" class="text-center"></h4>
+                <h4 id="eng_sentence" class="text-center"></h4>
+
                 <button id="hint" class="btn btn-secondary mt-3">Hint</button>
             </div>
 
