--- a/index.html
+++ b/index.html
@@ -5,37 +5,29 @@
     <title>Learn French Gender</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.min.css">
+
     <!-- Custom CSS -->
     <style>
         body {
             padding: 20px;
         }
 
-        #question {
+        #question,
+        #message,
+        #score {
             font-size: 24px;
             margin-bottom: 20px;
-        }
-
-        #message {
-            font-size: 24px;
-            margin-bottom: 20px;
+            text-align: center;
         }
 
         #image {
             max-width: 100%;
             max-height: 300px; /* Set the maximum height to 300px or any other value that works for you */
+            margin: 0 auto;
         }
 
-        #score {
-            font-size: 24px;
-            margin-bottom: 20px;
-        }
-
-        td {
-            padding: 10px;
-            text-align: center;
-        }
-
+        td,
         th {
             padding: 10px;
             text-align: center;
@@ -45,7 +37,28 @@
             display: none;
         }
 
+        #word-container,
+        #scoreboard-container {
+            margin-top: 20px;
+        }
+
+        #fr_word,
+        #eng_word,
+        #fr_sentence,
+        #eng_sentence {
+            text-align: center;
+        }
+
+        #hint {
+            margin-top: 20px;
+        }
     </style>
+    <script src="https://code.responsivevoice.org/responsivevoice.js"></script>
+<!--    <script>-->
+<!--        function speak() {-->
+<!--            responsiveVoice.speak(document.getElementById("question").textContent, "French Female"); // Replace "French Female" with the desired voice/language-->
+<!--        }-->
+<!--    </script>-->
 </head>
 <body>
 <div class="container">
@@ -54,26 +67,37 @@
             <h1 class="text-center mb-4">French gender</h1>
             <div class="card">
                 <div class="card-body">
-                    <h2 id="question" class="mb-4"></h2>
-                    <button id="masculine" class="btn btn-primary mr-2">Masculin</button>
-                    <button id="feminine" class="btn btn-primary">Féminin</button>
+                    <div class="d-flex justify-content-center align-items-center">
+                        <h2 id="question" class="mb-4 mr-2" onclick="speak('question')"></h2>
+                        <button onclick="speak('question')" type="button" class="btn ">
+                            <i class="bi bi-volume-up"></i>
+                        </button>
+
+                    </div>
+                    <div class="d-flex justify-content-center">
+                        <button id="masculine" class="btn btn-primary mr-2">Masculin</button>
+                        <button id="feminine" class="btn btn-primary">Féminin</button>
+                    </div>
                     <div class="message" id="message"></div>
                     <div class="score" id="score">
                         Score: <span id="score-value">0</span>
                     </div>
-                    <button id="restart-button" class="btn btn-danger mt-3">Restart</button>
+                    <div class="d-flex justify-content-center">
+                        <button id="restart-button" class="btn btn-danger mt-3">Restart</button>
+                    </div>
                 </div>
+
             </div>
 
-
             <div id="word-container" class="mb-4">
-                <h3 id="fr_word" class="text-center"></h3>
+                <h3 id="fr_word" class="text-center" onclick="speak('fr_word')"></h3>
                 <img id="image" class="mx-auto hidden" src="" alt="Image">
                 <h3 id="eng_word" class="text-center"></h3>
-                <h4 id="fr_sentence" class="text-center"></h4>
+                <h4 id="fr_sentence" class="text-center" onclick="speak('fr_sentence')"></h4>
                 <h4 id="eng_sentence" class="text-center"></h4>
-
-                <button id="hint" class="btn btn-secondary mt-3">Hint</button>
+                <div class="d-flex justify-content-center">
+                    <button id="hint" class="btn btn-secondary mt-3">Hint</button>
+                </div>
             </div>
 
             <div id="scoreboard-container">
@@ -91,7 +115,6 @@
                     </tbody>
                 </table>
             </div>
-
         </div>
     </div>
 </div>
@@ -102,6 +125,7 @@
         crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.min.js"
         crossorigin="anonymous"></script>
+
 
 <!-- Load the script from a separate file -->
 <script src="genderSwipe.js"></script>
